--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "text-diff-editor",
+  "name": "diffpulse",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "lexical": "0.16.1",
-    "@lexical/react": "0.16.1"
+    "@lexical/react": "0.16.1",
+    "@google/genai": "latest"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
